libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/LUSELDA.NSN
DEFINE DATA
LOCAL USING MYLDA
END-DEFINE

END
